[DROOLS-5780] descope ecj